<resources>
    <string name="app_name">WR Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name_subheader">"Music for Everyone"</string>
    
    <string name="tab_about">About</string>
    <string name="tab_contact">Contact Us</string>
    
    <string name="about_us_page_header">About Us</string>
    <string name="about_us_tab_header">WR Music</string>
    <string name="about_us_tab_description">WR Music is a dynamic mobile application designed to revolutionize the way you experience and acquire music. Offering an extensive array of albums spanning diverse genres, WR Music provides a gateway to musical exploration like never before. Whether you\'re a seasoned music enthusiast or a casual listener, WR Music invites you to immerse yourself in a world of sonic delights. Download the app today and embark on a journey of musical discovery!</string>
    
    <string name="contact_us_tab_header">Contact Us</string>
    <string name="contact_us_tab_description">Don\’t hesitate to contact us whether you have a suggestion on our improvement, a complain to discuss or an issue to solve.</string>
    <string name="contact_us_tab_contact">Contact us in our social media</string>

    <string name="drawer_nav_header_greetings">Hello,</string>
    <string name="drawer_username">username</string>
    <string name="drawer_nav_home">Home Page</string>
    <string name="drawer_nav_about_us">About Us</string>
    <string name="drawer_nav_items_list">Items List</string>
    <string name="drawer_nav_logout">Log Out</string>
    <string name="drawer_nav_open">Open</string>
    <string name="drawer_nav_close">Close</string>
    <string name="drawer_footer">© 2024 All Rights Reserved. WR Music developed and crafted in 2024.</string>

    <string name="email_box">Email Us</string>
    <string name="call_box">Call Us</string>
    <string name="instagram_box">Instagram</string>
    <string name="telegram_box">Telegram</string>
    <string name="facebook_box">Facebook</string>
    <string name="whatsapp_box">Whatsapp</string>
    <string name="info_box">4,6K Followers • 118 Posts</string>

    <string name="item_list_page_header">Items</string>
</resources>