<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home"
            android:title="@string/drawer_nav_home"/>
        <item android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info"
            android:title="@string/drawer_nav_about_us"/>
        <item android:id="@+id/nav_items_list"
            android:icon="@drawable/baseline_library_music"
            android:title="@string/drawer_nav_items_list"/>
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout"
            android:title="@string/drawer_nav_logout"/>
    </group>

</menu>