<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="35dp"
    tools:context=".Fragments.AboutFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/wr_music_logo"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:textStyle="bold"
        android:fontFamily="@font/sfui"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_subheader"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/sfui"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/about_us_tab_description"
        android:textSize="16sp"
        android:fontFamily="@font/font_sfui"
        android:textColor="@color/white"
        android:justificationMode="inter_word"/>

</LinearLayout>