<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_1"
    tools:context=".Fragments.AboutFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.03"
            android:textSize="55sp"
            android:textStyle="bold"
            android:letterSpacing="0.3"
            android:textAlignment="center"
            android:fontFamily="@font/font_sfui"
            android:textColor="@color/white"
            android:text="@string/about_us_page_header"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_gravity="center_vertical"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="35dp"
            android:fontFamily="@font/font_sfui"
            android:textColor="@color/white"
            android:text="@string/about_us_page_header"/>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/aboutTabLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/tab_background"
            app:tabGravity="fill"
            app:tabIndicatorGravity="stretch"
            app:tabIndicatorColor="@color/ungu_muda"
            app:tabIndicator="@drawable/tab_indicator">

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_sfui"
                android:text="@string/tab_about" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_sfui"
                android:text="@string/tab_contact" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/aboutViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/aboutTabLayout" />
    </RelativeLayout>
</LinearLayout>

